# seen

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  README_en.md  package.json  scomp.js  sedit.js  seditor.js  splay.js  vite.config.mjs
examples-new/: all.js
examples-new/ar/: السلام_عليكم.س.js  تجهيز_تركيبة.س.js  تداخل.س.js  فيبوناتشي.س.js
examples-new/ar/اسلامية/قرآن/: رسم_صفحة_قرآن.س.js
examples-new/ar/عنكبوتية/: تعاقب_الليل_والنهار.س.js
examples-new/en/: fibonacci.sn.js  hello_world.js  nesting.sn.js  receivers.sn.js  struct_init.sn.js
examples-new/en/web/: day_night.sn.js
examples/ar/: السلام_عليكم.س.js  تجهيز_تركيبة.س.js  تداخل.س.js  تمرير.س.js  فيبوناتشي.س.js
examples/ar/اسلامية/قرآن/: بيانات_من_القرآن.س.js  رسم_صفحة_قرآن.س.js
examples/ar/عنكبوتية/: تعاقب_الليل_والنهار.س.js
examples/arabic-عربي/العاب/اختراق__بريك_اوت(اصلحني)/: هيئة.س
examples/arabic-عربي/تمارين/فيبوناتشي/: هيئة.س
examples/arabic-عربي/سلام/: هيئة.س
examples/arabic-عربي/سلام/مصدر/: رئيسي.س
examples/arabic-عربي/علمي/رسم_بياني(اصلحني)/: هيئة.س
examples/arabic-عربي/علمي/رسم_بياني(غير_جاهز)/: ترجمة.س
examples/arabic-عربي/لغة_س/(اصلحني)تعداد/: هيئة.س
examples/arabic-عربي/لغة_س/احضر/: هيئة.س
examples/arabic-عربي/لغة_س/اذا/: هيئة.س
examples/arabic-عربي/لغة_س/بينما/: هيئة.س
examples/en/: fibonacci.sn.js  hello_world.js  nesting.sn.js  piping.sn.js  receivers.sn.js  struct_init.sn.js
examples/en/web/: day_night.sn.js  day_night_.sn.hs
examples/english/hello-world/: conf.seen
platform/: mobile.js
src/: main.rs
src/util/: cli.rs
(+74 files in other folders)
