[package]
name = "seen"
version = "0.1.0"
description = "seen sdk"
authors = ["Mustafa Abukhadra"]
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 1
strip = true

[dependencies.seen-compiler]
git = "https://github.com/abukhadra/seen-compiler.git"
# path = "../seen-compiler"

[dependencies.seen-editor]
git = "https://github.com/abukhadra/seen-editor.git"
# path = "../seen-editor/src-tauri"

[dependencies]
env_logger = "0.10.0"
clap = { version = "4.1.8", features = ["derive"] }
log = "0.4.17"
